add self-Updater